<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_home_24"
            android:id="@+id/nav_home"
            android:title="Home" />
        <item
            android:icon="@drawable/ic_baseline_report_24"
            android:id="@+id/nav_reports"
            android:title="@string/reports" />
    </group>

    <item android:title="@string/application_preference">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_baseline_account_circle_24"
                    android:id="@+id/nav_account"
                    android:title="@string/account" />
                <item
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:id="@+id/nav_setting"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>

    <item android:title="@string/help_and_privacy">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_baseline_help_center_24"
                    android:id="@+id/nav_help"
                    android:title="@string/help_and_faq" />
                <item
                    android:icon="@drawable/ic_baseline_privacy_24"
                    android:id="@+id/nav_privacy"
                    android:title="@string/privacy_policy" />

            </group>
        </menu>
    </item>
</menu>