<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vtrack.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.vtrack.ui.HelpFragment"
        android:label="@string/help_and_faq"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_privacy"
        android:name="com.example.vtrack.ui.PrivacyFragment"
        android:label="@string/privacy_policy"
        tools:layout="@layout/fragment_privacy" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.vtrack.ui.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.vtrack.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <activity android:id="@+id/nav_reports"
        android:name="com.example.vtrack.ViewVehicle"
        android:label="@string/reports"
        tools:layout="@layout/activity_view_vehicle"/>
</navigation>